2005-01-22 (Later in same day) Stuart Brorson   <sdb@cloud9.net>

	* include/prototype.h, src/(s_attrib.c, s_sheet_data.c,
	s_table.c, s_toplevel.c,  x_dialog.c): New feature -- gattrib
	now handles slotted components correctly.
	
	
2005-01-22 Stuart Brorson   <sdb@cloud9.net>

	* src/s_toplevel.c, src/s_attrib.c, src/s_sheet_data, Makefile.am: 
	Fixed bug where pre-existing
	attribs were deleted instead of being replaced.  Added new fcn 
	in s_attrib.c as part of this bugfix.

	* include/prototype.h, include/struct.h, include/x_menu.h,
	src/gattrib.c, src/gtkitementry_2_2.c,src/gtksheet_2_2.c,
	src/x_dialog.c:  New feature -- check for unsaved chages
	before leaving program.

	* configure.ac:  Added --enable-debug as configure option.

	
2005-01-21 Stuart Brorson   <sdb@cloud9.net>

        * src/s_toplevel.c, src/x_dialog.c: Fix bug where only one
	page of design was searched for missing attribs.  Also updated
	missing_sym dialog box.
	
2005-01-19 Stuart Brorson   <sdb@cloud9.net>

        * src/(s_object.c, gattrib.c, s_toplevel.c,x_fileselect.c,
	x_dialog.c): Incorporated pop-up window which notifies
	user if a component is found with no sym file.
	
2004-12-28 Stuart Brorson   <sdb@cloud9.net>

	* lib/system-gattribrc.in:  Changed to refer to system-gafrc.

2004-12-28 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Changed the call to AM_INIT_AUTOMAKE to take
	the GEDA_VERSION so that packages get created with the right
	version number

	* src/s_toplevel.c, x_dialog.c: Added a few #ifdef HAS_GTK22 tests
	to get gattrib to build using gtk12.  The addition tests in x_dialog.c
	are probably okay, but the test in s_toplevel.c needs to be fixed
	properly.

	* Makefile.am: Added missing file to EXTRA_DIST variable

2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20041228

2004-07-27  Stuart Brorson  <sdb@cloud9.net>

        *  Ported code to GTK+-2.X.  Re-wrote Makefile.am & configure.ac.  Split